# testKey

./: README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
releases/: 0.1.0.md
src/: testkey.py
src/testkey/: __init__.py  snake.py
tests/: test_snake.py  test_testkey.py
