[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testkey"
version = "0.1.0"
description = "Small test project for loading environment variables and tests"
authors = [ { name = "rwilson" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
